--- a/Views/ApplicationUsers/Show.cshtml
+++ b/Views/ApplicationUsers/Show.cshtml
@@ -12,45 +12,52 @@
     }
     <br />
 
-        @if (ViewBag.User.Id == ViewBag.UserCurent || ViewBag.EsteAdmin || ViewBag.EsteModerator)
-        {
-            <div class="d-flex flex-row justify-content-between m-2">
-                <a class="btn btn-success custom-btn mr-10" href="/ApplicationUsers/Edit/@ViewBag.User.Id">Edit Profile</a>
-                <a class="btn btn-danger custom-btn position-relative" style="left: 5px;" href="/ApplicationUsers/Delete/@ViewBag.User.Id">Delete Profile</a>
+    @if (ViewBag.User.Id == ViewBag.UserCurent || ViewBag.EsteAdmin || ViewBag.EsteModerator)
+    {
+        <div class="d-flex flex-row justify-content-between m-2">
+            <a class="btn btn-success custom-btn mr-10" href="/ApplicationUsers/Edit/@ViewBag.User.Id">Edit Profile</a>
+            <a class="btn btn-danger custom-btn position-relative" style="left: 5px;" href="/ApplicationUsers/Delete/@ViewBag.User.Id">Delete Profile</a>
+        </div>
+    }
+
+
+    <hr />
+
+    <br />
+
+    <h2 class="text-center"> <i class="bi bi-person-fill"></i> @ViewBag.User.FirstName @ViewBag.User.LastName </h2>
+    <br />
+    <br />
+    <div class="d-flex flex-column align-content-center justify-content-center px-3">
+        <div class="row">
+            <div class="col-2">
+                <!-- Colapsarea coloanelor pentru ecrane mici și mai mari -->
+                <div style="height:85px width:250px">
+                    <div>
+                    </div>
+                </div>
             </div>
-          }
-
-
-        <hr />
-
-        <br />
-
-        <h2 class="text-center"> <i class="bi bi-person-fill"></i> @ViewBag.User.FirstName @ViewBag.User.LastName </h2>
-        <br />
-        <br />
-        <div class="d-flex flex-column align-content-center justify-content-center px-3">
-            <div class="row">
-                <div class="col-2">
-                    <!-- Colapsarea coloanelor pentru ecrane mici și mai mari -->
-                    <div class="card" style="height:85px">
-                        <div class="card-body">
-                            <div><i class="bi bi-vector-pen"></i> @ViewBag.User.Description</div>
-                        </div>
+            <div class="col-2">
+                <!-- Colapsarea coloanelor pentru ecrane mici și mai mari -->
+                <div class="card" style="height:85px width:250px">
+                    <div class="card-body">
+                        <div><i class="bi bi-vector-pen"></i> @ViewBag.User.Description</div>
                     </div>
                 </div>
-                <div class="col-2">
-                    <!-- Colapsarea coloanelor pentru ecrane mici și mai mari -->
-                    <div class="card" style="height:85px">
-                        <div class="card-body">
-                            <div> 🎉 @ViewBag.User.Birthday 🎂</div>
-                        </div>
-                    </div>
-                </div>
+            </div>
             <div class="col-2">
                 <!-- Colapsarea coloanelor pentru ecrane mici și mai mari -->
                 <div class="card" style="height:85px">
                     <div class="card-body">
-                        <div>🏅 <b><a style="font-size: 20px">100</a></b></div>
+                        <div> 🎉 @ViewBag.User.Birthday </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2">
+                <!-- Colapsarea coloanelor pentru ecrane mici și mai mari -->
+                <div class="card" style="height:85px">
+                    <div class="card-body">
+                        <div>🏅 <b><a style="font-size: 20px">@ViewBag.Scor</a></b></div>
                     </div>
                 </div>
             </div>
@@ -64,7 +71,7 @@
                 </div>
             </div>
         </div>
-        </div>
+    </div>
     <br />
 
     @*Afisare raspunsuri si intrebari postate*@
@@ -74,29 +81,29 @@
             <div class="col-md-6">
                 <div class="p-3 border bg-light"><b>Questions</b></div>
                 <div class="card mb-3">
-                @foreach (var question in ViewBag.Questions)
-                {
+                    @foreach (var question in ViewBag.Questions)
+                    {
 
                         <div class="card-body text-primary" style="outline: none !important;">
                             <div class="card-text" style="outline: none !important;">
                                 <i class="bi bi-box-arrow-up-right" style="color:black"></i><a href="/Questions/Show/@question.Id">  @question.Title </a>
+                            </div>
                         </div>
-                        </div>
-                }
+                    }
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="p-3 border bg-light"><b>Answers</b></div>
                 <div class="card mb-3">
-                @foreach (var answer in ViewBag.Answers)
-                {
-                    
-                    <div class="card-body text-primary">
-                        <div class="card-text" style="outline: none !important;"><i class="bi bi-box-arrow-up-right" style="color:black"></i> <a href="/Questions/Show/@answer.QuestionId">@answer.Content </a> </div>
-                    </div>
-                    
-                }
+                    @foreach (var answer in ViewBag.Answers)
+                    {
+
+                        <div class="card-body text-primary">
+                            <div class="card-text" style="outline: none !important;"><i class="bi bi-box-arrow-up-right" style="color:black"></i> <a href="/Answers/Show/@answer.Id">@answer.Content </a> </div>
+                        </div>
+
+                    }
                 </div>
             </div>
         </div>
