--- a/Views/Exercises/Edit.cshtml
+++ b/Views/Exercises/Edit.cshtml
@@ -29,7 +29,7 @@
                     @Html.ValidationMessageFor(m => m.CategoryId, null, new { @class = "text-danger" })
                 </div>
                 <div>
-                    @Html.Label("Description", "Exercise Description")
+                    @Html.Label("Description", "Exercise Decription")
 
                     @Html.TextArea("Description", null, new { @class = "form-control"})
                     @Html.ValidationMessage("Description", null, new { @class = "text-danger" })
